2013-04-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, +lib/internal_utils.c, +lib/internal_utils.h,
	  lib/net.c, lib/number.c, Makefile.am:
	  - removed 'rgxg_number' function from library
	  - renamed 'rgxg_number' function to 'rgxg_number_single'
	  - minor code cleanup
	* lib/number.c:
	  - rgxg_number_greaterequal: fixed bug with leading zeros

2013-04-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, lib/net.c, src/cidr.c, man/rgxg.1:
	  - added support for IPv6 mixed notation
	  - added 'RGXG_NOMIXEDNOTATION' option
	  - added '-s' option to 'cidr' command
	  - fixed several bugs with IPv6 parsing
	  - fixed several bugs with IPv6 regex generation
	  - optimized IPv4 and IPv6 regex generation
	* include/rgxg/types.h, lib/common_macros.h, lib/net.c, lib/number.c:
	  - added 'RGXG_ERROR_MUTEXOPTIONS' error

2013-03-30	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/net.h, lib/net.c, src/cidr.c:
	  - added missing 'const' keyword to 'address' parameter
	  - added missing 'const' keyword to 'cidr' parameter
	  - added 'endptr' parameter to 'rgxg_net_cidr_string' function
	  - fixed error handling in 'rgxg_net_cidr_string' function
	  - cidr.c: adjusted error output

2013-03-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/range.c: fixed parsing of LENGTH value

2013-03-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/common_macros.h, +src/cidr.h, +src/cidr.c, src/main.c, Makefile.am:
	  - common_macros.h: added 'EASY_ERROR' macro
	  - provide 'cidr' command
	* lib/net.c:
	  - fixed bug in mask calculation
	  - fixed off-the-end error
	* man/rgxg.1:
	  - document 'alternation', 'escape' and 'cidr' command

2013-03-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, +include/rgxg/net.h, +lib/net.c, Makefile.am:
	  - provide 'rgxg_net_cidr_ipv4' function
	  - provide 'rgxg_net_cidr_ipv6' function
	  - provide 'rgxg_net_cidr_string' function
